--- a/standard-deployment.yml
+++ b/standard-deployment.yml
@@ -31,7 +31,7 @@ stages:
     steps:
     - script: |
         variant=$(jq -er '.build.args.VARIANT | select (.!=null)' devcontainer.json || sed '/^ARG VARIANT=/!d;s|.*=||;s|^"||;s|"$||' Dockerfile)
-        image=$(sed '/FROM/!d;s|FROM ||;s|${VARIANT}|'"${variant}|" Dockerfile)
+        image=$(jq -er '.image | select (.!=null)' devcontainer.json || sed '/FROM/!d;s|FROM ||;s|${VARIANT}|'"${variant}|" Dockerfile)
         echo "##vso[task.setvariable variable=url;isOutput=true]${image}"
       displayName: Get Build Image
       name: GetBuildImage
