--- a/standard-deployment.yml
+++ b/standard-deployment.yml
@@ -8,6 +8,9 @@ parameters:
 - name: terraformVersion
   type: string
   default: ''
+- name: buildContainerImage
+  type: string
+  default
 
 variables:
 - template: helpers/select-environment.yml
@@ -29,21 +32,13 @@ stages:
   jobs:
   - job: GetContainer
     steps:
-    - script: |
-        variant=$(jq -er '.build.args.VARIANT | select (.!=null)' devcontainer.json || sed '/^ARG VARIANT=/!d;s|.*=||;s|^"||;s|"$||' Dockerfile)
-        image=$(jq -er '.image | select (.!=null)' devcontainer.json || sed '/FROM/!d;s|FROM ||;s|${VARIANT}|'"${variant}|" Dockerfile)
-        echo "##vso[task.setvariable variable=url;isOutput=true]${image}"
-      displayName: Get Build Image
-      name: GetBuildImage
-      workingDirectory: $(Build.SourcesDirectory)/.devcontainer
+
   - ${{ if eq(parameters.useTerraform, true) }}:
     - job: TerraformPlan
       displayName: Terraform Plan
-      dependsOn: GetContainer
-      variables:
-        BUILD_IMAGE: $[ dependencies.GetContainer.outputs['GetBuildImage.url'] ]
       steps:
-      - script: echo $(BUILD_IMAGE)
+      - template: helpers/container-get-image.yml
+      - script: echo $(GetImage.url)
       - template: helpers/terraform-init.yml
 
       - task: TerraformTaskV1@0
