--- a/helpers/container-get-image.yml
+++ b/helpers/container-get-image.yml
@@ -5,11 +5,11 @@ parameters:
 
 steps:
 - ${{ if ne(parameters.buildContainerImage, '') }}:
-  - script: |
-        image=${{ parameters.buildContainerImage }}
-        echo "##vso[task.setvariable variable=url;isOutput=true]${image}"
+  - script: echo "##vso[task.setvariable variable=url;isOutput=true]${image}"
       displayName: Get Image
       name: GetImage
+      env: 
+        image: ${{ parameters.buildContainerImage }}
 
 - ${{ if eq(parameters.buildContainerImage, '') }}:
   - script: |
