--- a/helpers/container-get-image.yml
+++ b/helpers/container-get-image.yml
@@ -4,6 +4,7 @@ parameters:
   default: ''
 
 steps:
+# use the buildContainerImage param if set, otherwise find the devcontainer image url
 - ${{ if ne(parameters.buildContainerImage, '') }}:
   - script: echo "##vso[task.setvariable variable=url;isOutput=true]${image}"
     displayName: Get Image
