--- a/standard-deployment.yml
+++ b/standard-deployment.yml
@@ -132,6 +132,7 @@ stages:
       image: $(CONTAINER_IMAGE)
       env:
         CI: true
+        environmentName: $(ENVIRONMENT_NAME)
     strategy:
       runOnce:
         deploy:  
@@ -159,6 +160,6 @@ stages:
             displayName: Install Dependencies
             condition: ne(variables.CACHE_RESTORED, 'true')
 
-          - script: yarn test
-            displayName: Unit Test
+          - script: env-cmd -f .env.${environmentName} npm run build
+            displayName: Build App
                   
