--- a/standard-deployment.yml
+++ b/standard-deployment.yml
@@ -132,7 +132,6 @@ stages:
       image: $(CONTAINER_IMAGE)
       env:
         CI: true
-        environmentName: $(ENVIRONMENT_NAME)
     strategy:
       runOnce:
         deploy:  
@@ -160,6 +159,6 @@ stages:
             displayName: Install Dependencies
             condition: ne(variables.CACHE_RESTORED, 'true')
 
-          - script: env-cmd -f .env.${environmentName} npm run build
+          - script: env-cmd -f .env.${ENVIRONMENT_NAME} npm run build
             displayName: Build App
                   
