--- a/standard-deployment.yml
+++ b/standard-deployment.yml
@@ -159,6 +159,10 @@ stages:
             displayName: Install Dependencies
             condition: ne(variables.CACHE_RESTORED, 'true')
 
-          - script: env-cmd -f .env.${ENVIRONMENT_NAME} npm run build
+          - script: ./node_modules/.bin/env-cmd -f .env.${ENVIRONMENT_NAME} npm run build
             displayName: Build App
+
+          - publish: $(System.DefaultWorkingDirectory)/build/
+            artifact: react-app
+            displayName: Publish App Artifact
                   
