point to build artifact

--- a/standard-deployment.yml
+++ b/standard-deployment.yml
@@ -193,6 +193,6 @@ stages:
               awsCredentials: 'CICD (Dev) Infra Deploy'
               regionName: 'ap-southeast-2'
               bucketName: 'devops-sample-app-dev'
-              globExpressions: 'build'
+              globExpressions: $(Pipeline.Workspace)/react-app-$(ENVIRONMENT_NAME)/*
               filesAcl: 'public-read'
                   
