--- a/standard-deployment.yml
+++ b/standard-deployment.yml
@@ -125,7 +125,7 @@ stages:
               artifact: tfoutput-$(ENVIRONMENT_NAME)
               displayName: Publish Terraform Output
 
-  - job: Build
+  - job: Build App
     dependsOn: Terraform
     variables:
       CONTAINER_IMAGE: $[ stageDependencies.Validate.GetContainerImage.outputs['GetImage.url'] ]
@@ -165,7 +165,7 @@ stages:
       artifact: react-app-$(ENVIRONMENT_NAME)
       displayName: Publish App Artifact
 
-  - deployment: App
+  - deployment: Deploy App
     dependsOn: 
     - Build
     - Terraform
