--- a/standard-deployment.yml
+++ b/standard-deployment.yml
@@ -192,9 +192,10 @@ stages:
 
           - task: S3Upload@1
             inputs:
-              awsCredentials: 'CICD (Dev) Infra Deploy'
-              regionName: 'ap-southeast-2'
-              bucketName: 'devops-sample-app-dev'
-              globExpressions: $(Pipeline.Workspace)/react-app-$(ENVIRONMENT_NAME)
-              filesAcl: 'public-read'
+              awsCredentials: CICD (Dev) Infra Deploy
+              regionName: ap-southeast-2
+              bucketName: devops-sample-app-dev
+              sourceFolder: $(Pipeline.Workspace)
+              globExpressions: react-app-$(ENVIRONMENT_NAME)/**
+              filesAcl: public-read
                   
