--- a/standard-deployment.yml
+++ b/standard-deployment.yml
@@ -195,7 +195,7 @@ stages:
               awsCredentials: CICD (Dev) Infra Deploy
               regionName: ap-southeast-2
               bucketName: devops-sample-app-dev
-              sourceFolder: $(Pipeline.Workspace)
-              globExpressions: react-app-$(ENVIRONMENT_NAME)/**
+              sourceFolder: $(Pipeline.Workspace)/react-app-$(ENVIRONMENT_NAME)
+              globExpressions: '**'
               filesAcl: public-read
                   
