--- a/standard-deployment.yml
+++ b/standard-deployment.yml
@@ -190,22 +190,18 @@ stages:
           
           - script: cat $(Pipeline.Workspace)/tfoutput-$(ENVIRONMENT_NAME)/tfoutput.json
 
-          - task: AWSShellScript@1
-            inputs:
-              awsCredentials: 'CICD (Dev) Infra Deploy'
-              regionName: 'ap-southeast-2'
-              scriptType: 'inline'
-              inlineScript: 'aws s3 sync . s3://devops-sample-app-dev --delete --acl public-read'
-              disableAutoCwd: true
-              workingDirectory: '$(Pipeline.Workspace)/react-app-$(ENVIRONMENT_NAME)'
-              failOnStandardError: true
+          - script: |
+              websiteBucket=$(jq -er '.website_bucket.value | select (.!=null)' \
+              $(Pipeline.Workspace)/tfoutput-$(ENVIRONMENT_NAME)/tfoutput.json)
 
-          # - task: S3Upload@1
-          #   inputs:
-          #     awsCredentials: CICD (Dev) Infra Deploy
-          #     regionName: ap-southeast-2
-          #     bucketName: devops-sample-app-dev
-          #     sourceFolder: $(Pipeline.Workspace)/react-app-$(ENVIRONMENT_NAME)
-          #     globExpressions: '**'
-          #     filesAcl: public-read
+          - task: AWSShellScript@1
+            displayName: Sync S3 Bucket
+            inputs:
+              awsCredentials: $(AWS_SERVICE_CONNECTOR)
+              regionName: $(AWS_REGION)
+              scriptType: inline
+              inlineScript: 'aws s3 sync . s3://${websiteBucket} --delete --acl public-read'
+              disableAutoCwd: true
+              workingDirectory: $(Pipeline.Workspace)/react-app-$(ENVIRONMENT_NAME)
+              failOnStandardError: true
                   
