--- a/standard-deployment.yml
+++ b/standard-deployment.yml
@@ -193,9 +193,14 @@ stages:
           - script: |
               websiteBucket=$(jq -er '.website_bucket.value | select (.!=null)' \
               $(Pipeline.Workspace)/tfoutput-$(ENVIRONMENT_NAME)/tfoutput.json)
+              echo "##vso[task.setvariable variable=value;isOutput=true]${websiteBucket}"
+            name: GetWebsiteBucket
+            displayName: Get Website Bucket
 
           - task: AWSShellScript@1
             displayName: Sync S3 Bucket
+            env:
+              websiteBucket: $(GetWebsiteBucket.value)
             inputs:
               awsCredentials: $(AWS_SERVICE_CONNECTOR)
               regionName: $(AWS_REGION)
