default deployType to null

--- a/standard-deployment.yml
+++ b/standard-deployment.yml
@@ -13,9 +13,9 @@ parameters:
   default: ''
 - name: deployType
   type: string
-  default: ''
+  default: 'null'
   values:
-  - ''
+  - 'null'
   - 'ReactApp'
 
 variables:
